--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <p class="mt-4 text-gray-400">Your final mix will have combined effects.</p>
                 <div class="mt-4 bg-gray-700 p-3 rounded text-white" id="outcome-display">Select mixables and ingredients</div>
-                
+                <p class="mt-4 text-green-400" id="price"></p>
                 <div id="combined-effects" class="mt-4 hidden">
                     <h4 class="font-medium mb-2">Combined Effects:</h4>
                     <div class="effect-list" id="combined-effects-list">
